scripts/nullaway/original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8.txt
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/littleman/GenericLittleMan.java:54: error: [NullAway] initializer method does not guarantee @NonNull field instruction (line 42) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public GenericLittleMan(T littleManData, PositionGetterAdapter positionGetterAdapter) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/littleman/PositionGetterAdapter.java:70: error: [NullAway] initializer method does not guarantee @NonNull field positionGetter (line 63) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public PositionGetterAdapter() {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/littleman/littlemanutilities/littlemandata/LittleManMemory.java:36: error: [NullAway] initializer method does not guarantee @NonNull fields rememberedPage (line 27), rememberedData (line 29) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public LittleManMemory() {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/littlemancommands/LittleManCommands/LittleManConditionalAction.java:35: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return nextStep.get(this);
            ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/computer/computercomponents/InputPanel.java:27: error: [NullAway] initializer method does not guarantee @NonNull field value (line 19) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public InputPanel() {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/notebookdeveloper/gui/WordSelector.java:37: error: [NullAway] initializer method does not guarantee @NonNull field value (line 32) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public WordSelector() {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/notebookdeveloper/NotebookProblemSet.java:55: error: [NullAway] initializer method does not guarantee @NonNull field notebookDevelopmentProblem (line 44) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NotebookProblemSet(Collection<? extends NotebookDevelopmentProblem> notebookDevelopmentProblems) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/notebookdeveloper/submissioncontrols/SubmissionControlGui.java:30: error: [NullAway] initializer method does not guarantee @NonNull field notebookDeveloper (line 24) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SubmissionControlGui() {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/notebookdeveloper/speedcontroller/SpeedControllerGui.java:22: error: [NullAway] initializer method does not guarantee @NonNull field speedController (line 17) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SpeedControllerGui() {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/GenericLittleManGui.java:37: error: [NullAway] initializer method does not guarantee @NonNull field notebookDeveloper (line 29) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public GenericLittleManGui(T notebookDeveloperGui, U notebookEditorPanel) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/instructions/InstructionFromSet.java:102: error: [NullAway] @NonNull static field instructionDescriptions not initialized
    private static EnumMap<InstructionFromSet, String> instructionDescriptions;
                                                       ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/instructions/InstructionFromSet.java:103: error: [NullAway] @NonNull static field instructionDetails not initialized
    private static EnumMap<InstructionFromSet, String> instructionDetails;
                                                       ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/instructions/InstructionFromSet.java:269: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return instructionDescriptions.get(this);
        ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/instructions/InstructionFromSet.java:280: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return instructionDetails.get(this);
        ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/notebookdeveloper/notebooktester/RepeatingNotebookTester.java:20: error: [NullAway] initializer method does not guarantee @NonNull field messageFromTest (line 18) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public RepeatingNotebookTester(NotebookTesterFactory notebookTesterFactory, int numTests) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/notebookdeveloper/notebooktester/OnlineNotebookTester.java:35: error: [NullAway] initializer method does not guarantee @NonNull field errorStringBuilder (line 33) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public OnlineNotebookTester() {
           ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/tutorial/TutorialDriver.java:83: error: [NullAway] assigning @Nullable expression to @NonNull field
            newProblemDescription = null;
                                  ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/tutorial/TutorialDriver.java:84: error: [NullAway] assigning @Nullable expression to @NonNull field
            nextPageEditorItemListener = null;
                                       ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/tutorial/TutorialDriver.java:93: error: [NullAway] assigning @Nullable expression to @NonNull field
            newProblemDescription = null;
                                  ^
    (see http://t.uber.com/nullaway )
../original/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/tutorial/TutorialDriver.java:102: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.nextPageEditorItemListener = null;
                                            ^
    (see http://t.uber.com/nullaway )
20 errors
